Fix spacing in divs

--- a/htmltemp/css/default.css
+++ b/htmltemp/css/default.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navbar {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .sidebar {
@@ -19,12 +19,14 @@ body {
   background-color: #454545;
   padding: 10px;
   height: 86vh;
+  margin-bottom: 20px;
 }
 
 .rightbar {
   background-color: #454545;
   color: #ffffff;
   padding: 10px;
+  margin-bottom: 30px;
 }
 
 #map-canvas {
@@ -32,6 +34,10 @@ body {
   max-width: 100%;
   height: 86vh;
   width: 100vh;
+  vertical-align: middle;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
       
 .controls {
